[package]
name = "retina-core"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.60.1" 
cc = "1.0.79"

[dependencies]
anyhow = "1.0.70"
base64 = "0.13.1"
bimap = "0.6.3"
byteorder = "1.4.3"
chrono = "0.4"
colored = "2"
cpu-time = "1.0.0"
crossbeam-channel = "0.5.8"
csv = "1.2.1"
ctrlc = { version = "3.2.5", features = ["termination"] }
dns-parser = { git = "https://github.com/thegwan/dns-parser.git" }
hashlink = "0.7.0"
hdrhistogram = "7.5.2"
hex = { version = "0.4.3", features = ["serde"] }
httparse = "1.8"
indexmap = "1.9.3"
ipnet = "2.7.2"
itertools = "0.10.5"
lazy_static = "1.4.0"
log = { version = "0.4", features = ["release_max_level_info"] }
maplit = "1.0.2"
md5 = "0.7.0"
nom = "7.1.3"
pcap = "0.8.1"
pest = "2.5.7"
pest_derive = "2.5"
petgraph = "0.5.1"
pnet = "0.33.0"
prettytable-rs = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
ndarray = "0.15.6"
ndarray-stats = "0.5.1"
rand = "0.8.5"
statrs = "0.16.0"
strum = "0.20"
strum_macros = "0.20"
thiserror = "1.0"
tls-parser = { git = "https://github.com/thegwan/tls-parser.git" }
toml = "0.5.11"
x509-parser = "0.13.2"

[features]
timing = []
label = []
capture_start = []
collect = []
conn_cnt = []
mlx5 = []
default = ["mlx5"]
dur = []
proto = []
s_port = []
d_port = []
s_load = []
d_load = []
s_pkt_cnt = []
d_pkt_cnt = []
s_iat_mean = []
d_iat_mean = []
tcp_rtt = []
syn_ack = []
ack_dat = []
s_bytes_sum = []
d_bytes_sum = []
s_bytes_mean = []
d_bytes_mean = []
s_bytes_min = []
d_bytes_min = []
s_bytes_max = []
d_bytes_max = []
s_bytes_med = []
d_bytes_med = []
s_bytes_std = []
d_bytes_std = []
s_iat_sum = []
d_iat_sum = []
s_iat_min = []
d_iat_min = []
s_iat_max = []
d_iat_max = []
s_iat_med = []
d_iat_med = []
s_iat_std = []
d_iat_std = []
s_winsize_sum = []
d_winsize_sum = []
s_winsize_mean = []
d_winsize_mean = []
s_winsize_min = []
d_winsize_min = []
s_winsize_max = []
d_winsize_max = []
s_winsize_med = []
d_winsize_med = []
s_winsize_std = []
d_winsize_std = []
s_ttl_sum = []
d_ttl_sum = []
s_ttl_mean = []
d_ttl_mean = []
s_ttl_min = []
d_ttl_min = []
s_ttl_max = []
d_ttl_max = []
s_ttl_med = []
d_ttl_med = []
s_ttl_std = []
d_ttl_std = []
cwr_cnt = []
ece_cnt = []
urg_cnt = []
ack_cnt = []
psh_cnt = []
rst_cnt = []
syn_cnt = []
fin_cnt = []
